2004-05-20  Stefan Jahn  <stefan@lkcc.org>

	* matrix.cpp: Optimized copy constructors.
	new functions: detGauss() and inverseGaussJordan().  These
	functions compute determinant and inverse of a matrix using
	Gauss based algorithms.

	* eqnsys.cpp: Fixed and improved Gauss and Gauss-Jordan 
	algorithm for solving equations systems.

2004-05-17  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.cpp: Check for duplicate parameter names in 
	parameter sweeps, but allow them in same order sweeps.

	* strlist.cpp: New function index() returning the position of
	the first occurrence of the given string.

	* check_netlist.cpp: Checking for duplicate definitions in 
	equations and parameter sweep variables.

	* dataset.cpp: Fixed dataset output for single DC analyses.

	* parasweep.cpp: Fixed assignment of variable dataset
	dependencies.

2004-05-09  Stefan Jahn  <stefan@lkcc.org>

	* equation.cpp: Fixed a bug occurring when solution of equations
	appear to be plain reference vectors.
	Made equations depending on independent data vectors of the dataset
	dependent vectors.

2004-05-05  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.cpp: Checking presence and necessity of DC
	analysis.

2004-05-02  Stefan Jahn  <stefan@lkcc.org>

	* net.cpp: Implemented implicit dependencies of analyses.

	* analysis.cpp (delAnalysis): Implemented counterpart of
	addAnalysis().

	* check_netlist.cpp: Appended some more required model
	parameters to the diode model.

	* spsolver.cpp: Implemented a function which restores the 
	original netlist.  Modifications were necessary because of the
	actual analysis algorithm.

2004-05-01  Stefan Jahn  <stefan@lkcc.org>

	* vector.cpp: Fixed copy constructor.

2004-04-28  Michael Margraf  <michael.margraf@alumni.tu-berlin.de>

	* class complex: sin(), cos(), tan(), cot(), arcsin(), arccos(),
	arctan(), arccot(), sinh(), cosh(), tanh(), coth(), arsinh(),
	arcosh(), artanh(), arcoth(), log2()