@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: iac.h,v 1.1 2004-02-17 15:30:58 ela Exp $
+ * $Id: iac.h,v 1.2 2004-05-22 09:17:25 ela Exp $
  *
  */
 
@@ -29,6 +29,7 @@ class iac : public circuit
 {
  public:
   iac ();
+  void calcDC (void) { }
 };
 
 #endif /* __IAC_H__ */
