@@ -1,3 +1,11 @@
+2004-05-22  Stefan Jahn  <stefan@lkcc.org>
+
+	* iac.h (class iac):  Implemented DC model as zero current
+	source.
+
+	* vac.cpp: Implemented DC model of AC voltage source as zero
+	voltage source.
+
 2004-05-19  Stefan Jahn  <stefan@lkcc.org>
 
 	* microstrip/msline.cpp: Including <string.h> for strcmp().
